--- a/client/src/i18n/oc.json
+++ b/client/src/i18n/oc.json
@@ -9,7 +9,7 @@
   "settings": "Paramètres",
   "aboutHeader": "A prepaus",
   "copyButtonTooltip": "Copiat",
-  "welcomeHeader": "Benvengut a Darkwire v2.0",
+  "welcomeHeader": "Benvengut a Darkwire",
   "sentFile": "Avètz enviat {filename}",
   "userJoined": "{username} a rejonch",
   "userLeft": "{username} a quitat",
